--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.6.3.Final</version>
+		<version>3.3.2.GA</version>
 	</dependency>
 
 	<dependency>
@@ -45,6 +45,12 @@
 		<artifactId>javassist</artifactId>
 		<version>3.12.1.GA</version>
 	</dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.5.6</version>
+    </dependency>
   </dependencies>
 
   <build>
