--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
-		<version>3.3.2.GA</version>
+		<version>5.0.0.Final</version>
 	</dependency>
 
 	<dependency>
